Some further references added.

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,110 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{ayala_etal_2020,
+   author = {Ayala, Ana I. and Moras, Simone and Pierson, Donald C.},
+   title = {Simulations of future changes in thermal structure of Lake Erken: proof of concept for ISIMIP2b lake sector local simulation strategy},
+   journal = {Hydrol. Earth Syst. Sci.},
+   volume = {24},
+   number = {6},
+   pages = {3311-3330},
+   ISSN = {1607-7938},
+   DOI = {10.5194/hess-24-3311-2020},
+   year = {2020},
+   type = {Journal Article}
+}
+
+@article{Moras_etal_2019,
+   author = {Moras, Simone and Ayala, Ana I. and Pierson, Don C.},
+   title = {Historical modelling of changes in Lake Erken thermal conditions},
+   journal = {Hydrol. Earth Syst. Sci.},
+   volume = {23},
+   number = {12},
+   pages = {5001-5016},
+   ISSN = {1607-7938},
+   DOI = {10.5194/hess-23-5001-2019},
+   year = {2019},
+   type = {Journal Article}
+}
+
+@article{feldbauer_etal_2025,
+   author = {Feldbauer, Johannes and Mesman, Jorrit P. and Andersen, Tobias K. and Ladwig, Robert},
+   title = {Learning from a large-scale calibration effort of multiple lake temperature models},
+   journal = {Hydrol. Earth Syst. Sci.},
+   volume = {29},
+   number = {4},
+   pages = {1183-1199},
+   ISSN = {1607-7938},
+   DOI = {10.5194/hess-29-1183-2025},
+   year = {2025},
+   type = {Journal Article}
+}
+
+@article{jimenez_etal_2023,
+   author = {Jiménez-Navarro, I. C. and Mesman, J. P. and Pierson, D. and Trolle, D. and Nielsen, A. and Senent-Aparicio, J.},
+   title = {Application of an integrated catchment-lake model approach for simulating effects of climate change on lake inputs and biogeochemistry},
+   journal = {Sci. Tot. Environ.},
+   volume = {885},
+   pages = {163946},
+   ISSN = {1879-1026 (Electronic)
+0048-9697 (Linking)},
+   DOI = {10.1016/j.scitotenv.2023.163946},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/37149163},
+   year = {2023},
+   type = {Journal Article}
+}
+
+@article{mesman_etal_2020,
+   author = {Mesman, J. P. and Ayala, A. I. and Adrian, R. and De Eyto, E. and Frassl, M. A. and Goyette, S. and Kasparian, J. and Perroud, M. and Stelzer, J. A. A. and Pierson, D. C. and Ibelings, B. W.},
+   title = {Performance of one-dimensional hydrodynamic lake models during short-term extreme weather events},
+   journal = {Environ. Modell. Software},
+   volume = {133},
+   pages = {104852},
+   ISSN = {13648152},
+   DOI = {10.1016/j.envsoft.2020.104852},
+   year = {2020},
+   type = {Journal Article}
+}
+
+@article{mesman_etal_2022,
+   author = {Mesman, Jorrit P. and Ayala, Ana I. and Goyette, Stéphane and Kasparian, Jérôme and Marcé, Rafael and Markensten, Hampus and Stelzer, Julio A. A. and Thayne, Michael W. and Thomas, Mridul K. and Pierson, Don C. and Ibelings, Bas W.},
+   title = {Drivers of phytoplankton responses to summer wind events in a stratified lake: A modeling study},
+   journal = {Limnol. Oceanogr.},
+   volume = {67},
+   number = {4},
+   pages = {856-873},
+   ISSN = {0024-3590
+1939-5590},
+   DOI = {10.1002/lno.12040},
+   year = {2022},
+   type = {Journal Article}
+}
+
+@article{mesman_etal_2024,
+   author = {Mesman, Jorrit P. and Jiménez-Navarro, Inmaculada C. and Ayala, Ana I. and Senent-Aparicio, Javier and Trolle, Dennis and Pierson, Don C.},
+   title = {Timing of spring events changes under modelled future climate scenarios in a mesotrophic lake},
+   journal = {Hydrol. Earth Syst. Sci.},
+   volume = {28},
+   number = {8},
+   pages = {1791-1802},
+   ISSN = {1607-7938},
+   DOI = {10.5194/hess-28-1791-2024},
+   year = {2024},
+   type = {Journal Article}
+}
+
+@article{moore_etal_2021,
+   author = {Moore, Tadhg N. and Mesman, Jorrit P. and Ladwig, Robert and Feldbauer, Johannes and Olsson, Freya and Pilla, Rachel M. and Shatwell, Tom and Venkiteswaran, Jason J. and Delany, Austin D. and Dugan, Hilary and Rose, Kevin C. and Read, Jordan S.},
+   title = {{LakeEnsemblR}: An {R} package that facilitates ensemble modelling of lakes},
+   journal = {Environ. Modell. Software},
+   volume = {143},
+   pages = {105101},
+   ISSN = {13648152},
+   DOI = {10.1016/j.envsoft.2021.105101},
+   year = {2021},
+   type = {Journal Article}
+}
+
 @article{miracca_etal_2025,
   title={Turbulence Observations and Energetics of Diurnal Warm Layers},
   author={Miracca-Lage, Mariana and M{\'e}nesguen, Claire and Schmitt, Mira and Umlauf, Lars and Merckelbach, Lucas and Carpenter, Jeffrey R},
@@ -117,8 +221,7 @@ year = {2023},
 issn = {1364-8152},
 doi = {https://doi.org/10.1016/j.envsoft.2023.105637},
 url = {https://www.sciencedirect.com/science/article/pii/S1364815223000233},
-author = {Shajar Regev and Yohay Carmel and Gideon Gal},
-keywords = {Lake ecosystem modeling, Model evaluation, CSPS, WET, Lake Kinneret}
+author = {Shajar Regev and Yohay Carmel and Gideon Gal}
 }
 
 @article{sane_etal_2023,
