Some further references added.

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,111 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{woolway_etal_2021,
+  title={Phenological shifts in lake stratification under climate change},
+  author={Woolway, R Iestyn and Sharma, Sapna and Weyhenmeyer, Gesa A and Debolskiy, Andrey and Golub, Malgorzata and Mercado-Bett{\'\i}n, Daniel and Perroud, Marjorie and Stepanenko, Victor and Tan, Zeli and Grant, Luke and others},
+  journal={Nature Comm.},
+  volume={12},
+  number={1},
+  pages={2318},
+  year={2021},
+  doi={https://doi.org/10.1038/s41467-021-22657-4},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{mercado_etal_2021,
+  title={Forecasting water temperature in lakes and reservoirs using seasonal climate prediction},
+  author={Mercado-Bett{\'\i}n, Daniel and Clayer, Francois and Shikhani, Muhammed and Moore, Tadhg N and Fr{\'\i}as, Mar{\'\i}a Dolores and Jackson-Blake, Leah and Sample, James and Iturbide, Maialen and Herrera, Sixto and French, Andrew S and others},
+  journal={Water Res.},
+  volume={201},
+  pages={117286},
+  year={2021},
+  doi={https://doi.org/10.1016/j.watres.2021.117286},
+  publisher={Elsevier}
+}
+
+@article{jackson_etal_2021,
+  title={Opportunities for seasonal forecasting to support water management outside the tropics},
+  author={Jackson-Blake, Leah Amber and Clayer, Fran{\c{c}}ois and de Eyto, Elvira and French, Andrew and Fr{\'\i}as, Mar{\'\i}a Dolores and Mercado-Bett{\'\i}n, Daniel and Moore, Tadhg and Pu{\'e}rtolas, Laura and Poole, Russell and Rinke, Karsten and others},
+  journal={Hydrol. Earth Syst. Sci. Disc.},
+  volume={2021},
+  pages={1--22},
+  year={2021},
+  doi={https://doi.org/10.5194/hess-26-1389-2022},
+  publisher={G{\"o}ttingen, Germany}
+}
+
+@article{golub_etal_2022,
+  title={A framework for ensemble modelling of climate change impacts on lakes worldwide: the {ISIMIP} {L}ake {S}ector},
+  author={Golub, Malgorzata and Thiery, Wim and Marc{\'e}, Rafael and Pierson, Don and Vanderkelen, Inne and Mercado, Daniel and Woolway, R Iestyn and Grant, Luke and Jennings, Eleanor and Schewe, Jacob and others},
+  journal={Geosci. Model Devel. Disc.},
+  volume={2022},
+  pages={1--57},
+  year={2022},
+  doi={https://doi.org/10.5194/gmd-15-4597-2022},
+  publisher={G{\"o}ttingen, Germany}
+}
+
+@article{clayer_etal_2023,
+  title={Sources of skill in lake temperature, discharge and ice-off seasonal forecasting tools},
+  author={Clayer, Fran{\c{c}}ois and Jackson-Blake, Leah and Mercado-Bett{\'\i}n, Daniel and Shikhani, Muhammed and French, Andrew and Moore, Tadhg and Sample, James and Norling, Magnus and Frias, Maria-Dolores and Herrera, Sixto and others},
+  journal={Hydrol. Earth Syst. Sci.},
+  volume={27},
+  number={6},
+  pages={1361--1381},
+  year={2023},
+  doi={https://doi.org/10.5194/hess-27-1361-2023},
+  publisher={Copernicus Publications G{\"o}ttingen, Germany}
+}
+
+@article{shikhani_etal_2024,
+  title={Combining a multi-lake model ensemble and a multi-domain CORDEX climate data ensemble for assessing climate change impacts on Lake Sevan},
+  author={Shikhani, Muhammed and Feldbauer, Johannes and Ladwig, Robert and Mercado-Bett{\'\i}n, Daniel and Moore, Tadhg N and Gevorgyan, Artur and Misakyan, Amalya and Mi, Chenxi and Schultze, Martin and Boehrer, Bertram and others},
+  journal={Water Resources Res.},
+  volume={60},
+  number={11},
+  pages={e2023WR036511},
+  year={2024},
+  doi={https://doi.org/10.1029/2023WR036511},
+  publisher={Wiley Online Library}
+}
+
+@article{jones_etal_2025,
+  title={A multi-model assessment of global freshwater temperature and thermoelectric power supply under climate change},
+  author={Jones, Edward R and van Beek, Rens and Belleza, Gabriel C{\'a}rdenas and Burek, Peter and Dugdale, Stephen J and Fl{\"o}rke, Martina and Fridman, Dor and Gosling, Simon N and Kumar, Rohini and Mercado-Bettin, Daniel and others},
+  journal={Environ. Res. Water},
+  volume={1},
+  number={2},
+  pages={025002},
+  year={2025},
+  doi={https://doi.org/10.1088/3033-4942/addffa},
+  publisher={IOP Publishing}
+}
+
+@article{lewis_etal_2025,
+  title={Ecological Memory Contributes to a Spatial Mismatch in Water Quality Trends Between the Surface and Bottom Waters of 382 Temperate Lakes},
+  author={Lewis, Abigail SL and Mercado-Bett{\'\i}n, Daniel and Carey, Cayelan C},
+  journal={Ecol. Lett.},
+  volume={28},
+  number={11},
+  pages={e70243},
+  year={2025},
+  doi={https://doi.org/10.1111/ele.70243},
+  publisher={Wiley Online Library}
+}
+
+
+@article{gai_etal_2025,
+author = {Gai, Bo and Kumar, Rohini and Hüesker, Frank and Mi, Chenxi and Kong, Xiangzhen and Boehrer, Bertram and Rinke, Karsten and Shatwell, Tom},
+title = {Catchments Amplify Reservoir Thermal Response to Climate Warming},
+journal = {Water Resources Research},
+volume = {61},
+number = {1},
+pages = {e2023WR036808},
+doi = {https://doi.org/10.1029/2023WR036808},
+year = {2025}
+}
+
 @article{ayala_etal_2020,
    author = {Ayala, Ana I. and Moras, Simone and Pierson, Donald C.},
    title = {Simulations of future changes in thermal structure of Lake Erken: proof of concept for ISIMIP2b lake sector local simulation strategy},
