some old papers added

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,89 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{goudsmit_etal_2002,
+  title={Application of $k$-$\varepsilon$ turbulence models to enclosed basins: The role of internal seiches},
+  author={Goudsmit, G-H and Burchard, Hans and Peeters, Frank and W{\"u}est, Alfred},
+  journal={J. Geophys. Res. Oceans},
+  volume={107},
+  number={C12},
+  pages={23--1},
+  doi={https://doi.org/10.1029/2001JC000954},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@article{simpson_etal_2002,
+  title={The semi-diurnal cycle of dissipation in a {ROFI}: model-measurement comparisons},
+  author={Simpson, John H and Burchard, Hans and Fisher, Neil R and Rippeth, Tom P},
+  journal={Cont. Shelf Res.},
+  volume={22},
+  number={11-13},
+  pages={1615--1628},
+  doi={https://doi.org/10.1016/S0278-4343(02)00025-0},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{burchard_2001,
+  title={On the $q^2l$ equation by {M}ellor and {Y}amada (1982)},
+  author={Burchard, Hans},
+  journal={J. Phys. Oceanogr.},
+  volume={31},
+  number={5},
+  doi={https://doi.org/10.1175/1520-0485(2001)031%3C1377:OTQLEB%3E2.0.CO;2},
+  pages={1377--1387},
+  year={2001}
+}
+
+@article{burchard_deleersnijder_2001,
+  title={Stability of algebraic non-equilibrium second-order closure models},
+  author={Burchard, Hans and Deleersnijder, Eric},
+  journal={Ocean Modell.},
+  volume={3},
+  number={1-2},
+  pages={33--50},
+  doi={https://doi.org/10.1016/S1463-5003(00)00016-0},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{burchard_petersen_1999,
+  title={Models of turbulence in the marine environment—A comparative study of two-equation turbulence models},
+  author={Burchard, Hans and Petersen, Ole},
+  journal={J. Mar. Syst.},
+  volume={21},
+  number={1-4},
+  pages={29--53},
+  doi={https://doi.org/10.1016/S0924-7963(99)00004-4},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@article{burchard_etal_1998,
+  title={Comparing the performance of the Mellor-Yamada and the $\kappa$-$\varepsilon$ two-equation turbulence models},
+  author={Burchard, Hans and Petersen, Ole and Rippeth, Tom P},
+  journal={J. Geophys. Res. Oceans},
+  volume={103},
+  number={C5},
+  pages={10543--10554},
+  doi={https://doi.org/10.1029/98JC00261},
+  year={1998},
+  publisher={Wiley Online Library}
+}
+
+@article{burchard_baumert_1995,
+  title={On the performance of a mixed-layer model based on the $\kappa$-$\varepsilon$ turbulence closure},
+  author={Burchard, Hans and Baumert, Helmut},
+  journal={J. Geophys. Res. Oceans},
+  volume={100},
+  number={C5},
+  pages={8523--8540},
+  doi={https://doi.org/10.1029/94JC03229},
+  year={1995},
+  publisher={Wiley Online Library}
+}
+
 @article{woolway_etal_2021,
   title={Phenological shifts in lake stratification under climate change},
   author={Woolway, R Iestyn and Sharma, Sapna and Weyhenmeyer, Gesa A and Debolskiy, Andrey and Golub, Malgorzata and Mercado-Bett{\'\i}n, Daniel and Perroud, Marjorie and Stepanenko, Victor and Tan, Zeli and Grant, Luke and others},
@@ -1144,16 +1227,18 @@ author = {Brandon G. Reichl and Robert Hallberg},
 
 }
 
-@article{burchardbolding_2000,
+@article{burchard_bolding_2001,
    author    = {Hans Burchard and Karsten Bolding},
-   title     = {Comparitive analysis of four second-moment turbulence closure
+   title     = {Comparative analysis of four second-moment turbulence closure
                 for the oceanic mixed layer.},
    journal   = JPO,
-   year      = {2000},
+   year      = {2001},
+   pages     = {1943-1968},
+   volume    = {31},
    doi       = {doi:10.1175/1520-0485(2001)031%3C1943:CAOFSM%3E2.0.CO;2}
 }
 
-@article{burchardetal_1998,
+@article{burchard_etal_1998,
    author    = {Hans Burchard and Adolf Stips and Walter Eifler
                 and Karsten Bolding and Manuel Villarreal},
    title     = {Numerical simulation of dissipation measurements in
