2 burchard_etal_1998 -> burchard_etal_1998[ab]

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -98,7 +98,7 @@
   publisher={Elsevier}
 }
 
-@article{burchard_etal_1998,
+@article{burchard_etal_1998a,
   title={Comparing the performance of the Mellor-Yamada and the $\kappa$-$\varepsilon$ two-equation turbulence models},
   author={Burchard, Hans and Petersen, Ole and Rippeth, Tom P},
   journal={J. Geophys. Res. Oceans},
@@ -1238,7 +1238,7 @@ author = {Brandon G. Reichl and Robert Hallberg},
    doi       = {doi:10.1175/1520-0485(2001)031%3C1943:CAOFSM%3E2.0.CO;2}
 }
 
-@article{burchard_etal_1998,
+@article{burchard_etal_1998b,
    author    = {Hans Burchard and Adolf Stips and Walter Eifler
                 and Karsten Bolding and Manuel Villarreal},
    title     = {Numerical simulation of dissipation measurements in
