More references added.

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,141 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+
+
+
+@article{weber_etal_2007,
+  title={Iron profiles and speciation of the upper water column at the {B}ermuda {A}tlantic {T}ime-series {S}tudy site: a model based sensitivity study},
+  author={Weber, Lisa and V{\"o}lker, Christoph and Oschlies, Andreas and Burchard, Hans},
+  journal={Biogeosciences},
+  volume={4},
+  number={4},
+  pages={689--706},
+  doi={https://doi.org/10.5194/bg-4-689-2007},
+  year={2007},
+  publisher={Copernicus GmbH}
+}
+
+@article{burchard_etal_2005,
+  title={Application of modified {P}atankar schemes to stiff biogeochemical models for the water column},
+  author={Burchard, Hans and Deleersnijder, Eric and Meister, Andreas},
+  journal={Ocean Dyn.},
+  volume={55},
+  number={3},
+  pages={326--337},
+  doi={https://doi.org/10.1007/s10236-005-0001-x},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{burchard_etal_2003,
+  title={A high-order conservative Patankar-type discretisation for stiff systems of production--destruction equations},
+  author={Burchard, Hans and Deleersnijder, Eric and Meister, Andreas},
+  journal={Appl. Numer. Math.},
+  volume={47},
+  number={1},
+  pages={1--30},
+  doi={https://doi.org/10.1016/S0168-9274(03)00101-6},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{deleersnijder_etal_2003,
+  title={Reply to {M}ellor’s comments on “{S}tability of algebraic non-equilibrium second-order closure models” ({O}cean {M}odelling 3 (2001) 33--50)},
+  author={Deleersnijder, Eric and Burchard, Hans},
+  journal={Ocean Modell.},
+  volume={5},
+  number={3},
+  pages={291--293},
+  doi={https://doi.org/10.1016/S1463-5003(02)00059-8},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{bolding_etal_2002,
+  title={Turbulent mixing in the {N}orthern {N}orth {S}ea: a numerical model study},
+  author={Bolding, Karsten and Burchard, Hans and Pohlmann, Thomas and Stips, Adolf},
+  journal={Cont. Shelf Res.},
+  volume={22},
+  number={18-19},
+  pages={2707--2724},
+  doi={https://doi.org/10.1016/S0278-4343(02)00122-X},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{burchard_2002,
+  title={Energy-conserving discretisation of turbulent shear and buoyancy production},
+  author={Burchard, Hans},
+  journal={Ocean Modell.},
+  volume={4},
+  number={3-4},
+  pages={347--361},
+  doi={https://doi.org/10.1016/S1463-5003(02)00009-4},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{burchard_beckers_2004,
+  title={Non-uniform adaptive vertical grids in one-dimensional numerical ocean models},
+  author={Burchard, Hans and Beckers, Jean-Marie},
+  journal={Ocean Modell.},
+  volume={6},
+  number={1},
+  pages={51--81},
+  doi={https://doi.org/10.1016/S1463-5003(02)00060-4},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{asadi_etal_2025,
+   author = {Asadi, Sara and Pacheco, Juan Pablo and Ladwig, Robert and López-Ballesteros, Adrián and Mesman, Jorrit P. and Jimeno-Sáez, Patricia and Senent-Aparicio, Javier},
+   title = {Coupling {SWAT+}, {GOTM-WET}, and {LSTM} to predict daily {DO} in {M}ar {M}enor},
+   journal = {Results Engin.},
+   ISSN = {25901230},
+   DOI = {10.1016/j.rineng.2025.107907},
+   year = {2025},
+   type = {Journal Article}
+}
+
+@article{feldbauer_etal_2022,
+   author = {Feldbauer, Johannes and Ladwig, Robert and Mesman, Jorrit P. and Moore, Tadhg N. and Zündorf, Hilke and Berendonk, Thomas U. and Petzoldt, Thomas},
+   title = {Ensemble of models shows coherent response of a reservoir’s stratification and ice cover to climate warming},
+   journal = {Aquatic Sci.},
+   volume = {84},
+   number = {4},
+   pages = {50},
+   ISSN = {1015-1621 1420-9055},
+   DOI = {10.1007/s00027-022-00883-2},
+   year = {2022},
+   type = {Journal Article}
+}
+
+@article{jimenez-navarro_etal_2025,
+   author = {Jiménez-Navarro, Inmaculada C. and López-Ballesteros, Adrián and Mesman, Jorrit P. and Trolle, Dennis and Pierson, Don and Senent-Aparicio, Javier},
+   title = {Modeling climate impacts on ecosystem services in an anthropized coastal lagoon for effective planning and adaptation},
+   journal = {Clim. Change},
+   volume = {178},
+   number = {5},
+   ISSN = {0165-0009 1573-1480},
+   DOI = {10.1007/s10584-025-03926-3},
+   year = {2025},
+   type = {Journal Article}
+}
+
+@article{pacheco_etal_2025,
+   author = {Pacheco, J. P. and Lopez-Ballesteros, A. and Mesman, J. P. and Aznarez, C. and Pierson, D. and Trolle, D. and Nielsen, A. and Senent-Aparicio, J.},
+   title = {Coupling {SWAT+} and {GOTM-WET} models to assess agricultural management practices for mitigating harmful algal blooms in Mar Menor, Spain},
+   journal = {J. Environ. Management},
+   volume = {380},
+   pages = {125033},
+   ISSN = {1095-8630 (Electronic) 0301-4797 (Linking)},
+   DOI = {10.1016/j.jenvman.2025.125033},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/40120452},
+   year = {2025},
+   type = {Journal Article}
+}
+
 @article{goudsmit_etal_2002,
   title={Application of $k$-$\varepsilon$ turbulence models to enclosed basins: The role of internal seiches},
   author={Goudsmit, G-H and Burchard, Hans and Peeters, Frank and W{\"u}est, Alfred},
@@ -1088,6 +1223,7 @@ author = {Brandon G. Reichl and Robert Hallberg},
   journal = MEPS,
   year = "2007",
   volume = "339",
+  doi={https://doi.org/10.3354/meps},
   pages = "199--213"
 }
 
