More publications added.

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -40,6 +40,225 @@
 @String{inp = "In Press"}
 
 
+@article{darko_modeling_2018,
+	title = {Modeling the impacts of climate change on the thermal and oxygen dynamics of {Lake} {Volta}},
+	issn = {0380-1330},
+	url = {http://www.sciencedirect.com/science/article/pii/S0380133018302211},
+	doi = {10.1016/j.jglr.2018.11.010},
+	urldate = {2018-12-03},
+	journal = {J. Great Lakes Res,},
+	author = {Darko, Deborah and Trolle, Dennis and Asmah, Ruby and Bolding, Karsten and Adjei, Kwaku A. and Odai, Samuel N.},
+	month = nov,
+	year = {2018}
+}
+
+@article{sachse_extending_2014,
+	title = {Extending one-dimensional models for deep lakes to simulate the impact of submerged macrophytes on water quality},
+	volume = {61},
+	issn = {1364-8152},
+	url = {http://www.sciencedirect.com/science/article/pii/S1364815214001625},
+	doi = {10.1016/j.envsoft.2014.05.023},
+	urldate = {2019-09-04},
+	journal = {Environ. Modell. Software},
+	author = {Sachse, René and Petzoldt, Thomas and Blumstock, Maria and Moreira, Santiago and Pätzig, Marlene and Rücker, Jacqueline and Janse, Jan H. and Mooij, Wolf M. and Hilt, Sabine},
+	month = nov,
+	year = {2014},
+	pages = {410--423}
+}
+
+@article{chen_modeling_2020,
+	title = {Modeling the {Ecological} {Response} of a {Temporarily} {Summer}-{Stratified} {Lake} to {Extreme} {Heatwaves}},
+	volume = {12},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	url = {https://www.mdpi.com/2073-4441/12/1/94},
+	doi = {10.3390/w12010094},
+	language = {en},
+	number = {1},
+	urldate = {2020-03-23},
+	journal = {Water},
+	author = {Chen, Weiyu and Nielsen, Anders and Andersen, Tobias Kuhlmann and Hu, Fenjuan and Chou, Qingchuan and Søndergaard, Martin and Jeppesen, Erik and Trolle, Dennis},
+	month = jan,
+	year = {2020},
+	note = {Number: 1
+Publisher: Multidisciplinary Digital Publishing Institute},
+	pages = {94}
+}
+
+@article{andersen_predicting_2020,
+	title = {Predicting ecosystem state changes in shallow lakes using an aquatic ecosystem model: {Lake} {Hinge}, {Denmark}, an example},
+	volume = {30},
+	copyright = {© 2020 The Authors. Ecological Applications  published by Wiley Periodicals LLC on behalf of Ecological Society of America},
+	issn = {1939-5582},
+	shorttitle = {Predicting ecosystem state changes in shallow lakes using an aquatic ecosystem model},
+	url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1002/eap.2160},
+	doi = {10.1002/eap.2160},
+	language = {en},
+	number = {7},
+	urldate = {2020-06-12},
+	journal = {Ecological Applications},
+	author = {Andersen, Tobias Kuhlmann and Nielsen, Anders and Jeppesen, Erik and Hu, Fenjuan and Bolding, Karsten and Liu, Zhengwen and Søndergaard, Martin and Johansson, Liselotte S. and Trolle, Dennis},
+	year = {2020}
+}
+
+@article{gal_ensemble_2020,
+	title = {Ensemble {Modeling} of the {Impact} of {Climate} {Warming} and {Increased} {Frequency} of {Extreme} {Climatic} {Events} on the {Thermal} {Characteristics} of a {Sub}-{Tropical} {Lake}},
+	volume = {12},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	url = {https://www.mdpi.com/2073-4441/12/7/1982},
+	doi = {10.3390/w12071982},
+	language = {en},
+	number = {7},
+	urldate = {2020-07-17},
+	journal = {Water},
+	author = {Gal, Gideon and Yael, Gilboa and Noam, Schachar and Moshe, Estroti and Schlabing, Dirk},
+	month = jul,
+	year = {2020},
+	pages = {1982}
+}
+
+
+@article{enstad_dissolution_2008,
+	series = {{TCCS}-4: {The} 4th {Trondheim} {Conference} on {CO2} {Capture}, {Transport} and {Storage}},
+	title = {Dissolution of a {CO2} lake, modeled by using an advanced vertical turbulence mixing scheme},
+	volume = {2},
+	issn = {1750-5836},
+	url = {http://www.sciencedirect.com/science/article/pii/S1750583608000327},
+	doi = {10.1016/j.ijggc.2008.04.001},
+	language = {en},
+	number = {4},
+	urldate = {2020-10-05},
+	journal = {International Journal of Greenhouse Gas Control},
+	author = {Enstad, Lars Inge and Rygg, Kristin and Haugan, Peter Mosby and Alendal, Guttorm},
+	month = oct,
+	year = {2008},
+	pages = {511--519}
+}
+
+
+@article{andersen_how_2020,
+	title = {How morphology shapes the parameter sensitivity of lake ecosystem models},
+	issn = {1364-8152},
+	url = {http://www.sciencedirect.com/science/article/pii/S1364815220310021},
+	doi = {10.1016/j.envsoft.2020.104945},
+	language = {en},
+	number = {136},
+	urldate = {2020-12-08},
+	journal = {Environmental Modelling \& Software},
+	author = {Andersen, Tobias Kuhlmann and Bolding, Karsten and Nielsen, Anders and Bruggeman, Jorn and Jeppesen, Erik and Trolle, Dennis},
+	month = dec,
+	year = {2020},
+	pages = {104945}
+}
+
+@article{krishna_model-based_2021,
+	title = {Model-based data analysis of the effect of winter mixing on primary production in a lake under reoligotrophication},
+	volume = {440},
+	issn = {0304-3800},
+	url = {http://www.sciencedirect.com/science/article/pii/S0304380020304634},
+	doi = {10.1016/j.ecolmodel.2020.109401},
+	language = {en},
+	urldate = {2021-01-14},
+	journal = {Ecol. Modell.},
+	author = {Krishna, Shubham and Ulloa, Hugo N. and Kerimoglu, Onur and Minaudo, Camille and Anneville, Orlane and Wüest, Alfred},
+	month = jan,
+	year = {2021},
+	pages = {109401}
+}
+
+@article{chou_assessing_2021,
+	title = {Assessing {Impacts} of {Changes} in {External} {Nutrient} {Loadings} on a {Temperate} {Chinese} {Drinking} {Water} {Reservoir}},
+	volume = {9},
+	issn = {2296-665X},
+	url = {https://www.frontiersin.org/articles/10.3389/fenvs.2021.632778/full},
+	doi = {10.3389/fenvs.2021.632778},
+	language = {English},
+	urldate = {2021-04-08},
+	journal = {Front. Environ. Sci.},
+	author = {Chou, Qingchuan and Nielsen, Anders and Andersen, Tobias K. and Hu, Fenjuan and Chen, Weiyu and Zhang, Xiaolin and Cao, Te and Ni, Leyi and Jeppesen, Erik and Trolle, Dennis},
+	year = {2021},
+	note = {Publisher: Frontiers}
+}
+
+
+@article{chen_modeling_2020-1,
+	title = {Modeling the {Ecological} {Response} of a {Temporarily} {Summer}-{Stratified} {Lake} to {Extreme} {Heatwaves}},
+	volume = {12},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2073-4441},
+	url = {https://www.mdpi.com/2073-4441/12/1/94},
+	doi = {10.3390/w12010094},
+	language = {en},
+	number = {1},
+	urldate = {2022-09-27},
+	journal = {Water},
+	author = {Chen, Weiyu and Nielsen, Anders and Andersen, Tobias Kuhlmann and Hu, Fenjuan and Chou, Qingchuan and Søndergaard, Martin and Jeppesen, Erik and Trolle, Dennis},
+	month = jan,
+	year = {2020},
+	note = {Number: 1
+Publisher: Multidisciplinary Digital Publishing Institute},
+	pages = {94}
+}
+
+@article{kong_reservoir_2022,
+	title = {Reservoir water quality deterioration due to deforestation emphasizes the indirect effects of global change},
+	volume = {221},
+	issn = {0043-1354},
+	url = {https://www.sciencedirect.com/science/article/pii/S0043135422006741},
+	doi = {10.1016/j.watres.2022.118721},
+	language = {en},
+	urldate = {2022-11-24},
+	journal = {Water Res.},
+	author = {Kong, Xiangzhen and Ghaffar, Salman and Determann, Maria and Friese, Kurt and Jomaa, Seifeddine and Mi, Chenxi and Shatwell, Tom and Rinke, Karsten and Rode, Michael},
+	month = aug,
+	year = {2022},
+	pages = {118721}
+}
+
+@article{kong_synergistic_2023,
+	title = {Synergistic {Effects} of {Warming} and {Internal} {Nutrient} {Loading} {Interfere} with the {Long}-{Term} {Stability} of {Lake} {Restoration} and {Induce} {Sudden} {Re}-eutrophication},
+	issn = {0013-936X},
+	url = {https://doi.org/10.1021/acs.est.2c07181},
+	doi = {10.1021/acs.est.2c07181},
+	urldate = {2023-03-01},
+	journal = {Environ. Sci. Technol.},
+	author = {Kong, Xiangzhen and Determann, Maria and Andersen, Tobias Kuhlmann and Barbosa, Carolina Cerqueira and Dadi, Tallent and Janssen, Annette B.G. and Paule-Mercado, Ma. Cristina and Pujoni, Diego Guimarães Florencio and Schultze, Martin and Rinke, Karsten},
+	month = feb,
+	year = {2023},
+	note = {Publisher: American Chemical Society}
+}
+
+@article{determann_nutrient_2024,
+	title = {Nutrient retention in a small reservoir under changed variability of inflow nutrient concentration},
+	volume = {0},
+	issn = {2044-2041},
+	url = {https://doi.org/10.1080/20442041.2024.2305105},
+	doi = {10.1080/20442041.2024.2305105},
+	number = {0},
+	urldate = {2024-05-10},
+	journal = {Inland Waters},
+	author = {Determann, Maria and Musolff, Andreas and Frassl, Marieke A. and Rinke, Karsten and Shatwell, Tom},
+	year = {2024},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.1080/20442041.2024.2305105},
+	pages = {1--16}
+}
+
+@article{ladwig_impact_2023,
+	title = {Impact of salinization on lake stratification and spring mixing},
+	volume = {8},
+	copyright = {© 2021 The Authors. Limnology and Oceanography Letters published by Wiley Periodicals LLC on behalf of Association for the Sciences of Limnology and Oceanography.},
+	issn = {2378-2242},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/lol2.10215},
+	doi = {10.1002/lol2.10215},
+	language = {en},
+	number = {1},
+	urldate = {2024-05-15},
+	journal = {Limnol. Oceanogr. Lett.},
+	author = {Ladwig, Robert and Rock, Linnea A. and Dugan, Hilary A.},
+	year = {2023},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/lol2.10215},
+	pages = {93--102}
+}
 
 
 @article{weber_etal_2007,
