two references added.

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,29 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{li_wirtz_2025,
+title={Aggregation of suspended particles limited by preferential settling},
+author={Li, Enpei and Wirtz, Kai},
+journal={J. Geophys. Res. Oceans},
+volume={130},
+number={7},
+pages={e2025JC022471},
+doi={https://doi.org/10.1029/2025JC022471},
+year={2025},
+publisher={Wiley Online Library}
+}
+
+@article{wirtz_etal_2022,
+title={Vertically migrating phytoplankton fuel high oceanic primary production},
+author={Wirtz, Kai and Smith, S Lan and Mathis, Moritz and Taucher, Jan},
+journal={Nature Clim. Change},
+volume={12},
+number={8},
+pages={750--756},
+doi={https://doi.org/10.1038/s41558-022-01430-5},
+year={2022},
+publisher={Nature Publishing Group UK London}
+}
 
 @article{darko_modeling_2018,
 	title = {Modeling the impacts of climate change on the thermal and oxygen dynamics of {Lake} {Volta}},
