some more references added

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,88 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{dong_etal_2024,
+  title={Submesoscales are a significant turbulence source in global ocean surface boundary layer},
+  author={Dong, Jihai and Fox-Kemper, Baylor and Wenegrat, Jacob O and Bodner, Abigail S and Yu, Xiaolong and Belcher, Stephen and Dong, Changming},
+  journal={Nature Comm.},
+  volume={15},
+  number={1},
+  pages={9566},
+  year={2024},
+  doi={https://doi.org/10.1038/s41467-024-53959-y},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{jenkins_etal_2012,
+  title={Modelling the effect of ocean waves on the atmospheric and ocean boundary layers},
+  author={Jenkins, Alastair D and Paskyabi, Mostafa Bakhoday and Fer, Ilker and Gupta, Alok and Adakudlu, Muralidhar},
+  journal={Energy Procedia},
+  volume={24},
+  pages={166--175},
+  year={2012},
+  doi={https://doi.org/10.1016/j.egypro.2012.06.098},
+  publisher={Elsevier}
+}
+
+@article{skielka_etal_2010,
+  title={Study of the equatorial {A}tlantic {O}cean mixing layer using a one-dimensional turbulence model},
+  author={Skielka, Udo Tersiano and Soares, Jacyra and Oliveira, Amauri Pereira de},
+  journal={Brazilian J. Oceanogr.},
+  volume={58},
+  pages={57--69},
+  year={2010},
+  doi={https://www.scielo.br/j/bjoce/a/shfzhWRdBH684kVGG6DLB4s/?lang=en},
+  publisher={SciELO Brasil}
+}
+
+@article{khalilabadi_2024,
+  title={Turbulent Processes in the {O}man {S}ea: A Numerical Study},
+  author={Khalilabadi, Mohammad Reza},
+  journal={Water Resources},
+  volume={51},
+  number={2},
+  pages={98--109},
+  year={2024},
+  doi={https://doi.org/10.1134/S0097807823600717},
+  publisher={Springer}
+}
+
+@article{paskyabi-bakhoday_fer_2014,
+  title={Turbulence structure in the upper ocean: a comparative study of observations and modeling},
+  author={Paskyabi, Mostafa Bakhoday and Fer, Ilker},
+  journal={Ocean Dyn.},
+  volume={64},
+  number={4},
+  pages={611--631},
+  year={2014},
+  doi={https://doi.org/10.1007/s10236-014-0697-6},
+  publisher={Springer}
+}
+
+@article{jackson_etal_2009,
+  title={An examination of mixed layer sensitivity in the northeast Pacific Ocean from July 2001--July 2005 using the general ocean turbulence model and Argo data},
+  author={Jackson, Jennifer M and Myers, Paul G and Ianson, Debby},
+  journal={Atmos. Ocean},
+  volume={47},
+  number={2},
+  pages={139--153},
+  year={2009},
+  doi={https://doi.org/10.3137/OC308.2009},
+  publisher={Taylor \& Francis}
+}
+
+@article{yuan_etal_2024,
+  title={The {K}-profile parameterization augmented by deep neural networks ({KPP}\_{DNN}) in the general ocean turbulence model ({GOTM})},
+  author={Yuan, Jianguo and Liang, Jun-Hong and Chassignet, Eric P and Zavala-Romero, Olmo and Wan, Xiaoliang and Cronin, Meghan F},
+  journal={J. Adv. Model. Earth Syst.},
+  volume={16},
+  number={9},
+  pages={e2024MS004405},
+  year={2024},
+  doi={https://doi.org/10.1029/2024MS004405},
+  publisher={Wiley Online Library}
+}
+
 @article{li_wirtz_2025,
 title={Aggregation of suspended particles limited by preferential settling},
 author={Li, Enpei and Wirtz, Kai},
